Removed the crash cause in the service when orientation is changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="player_broadcast">player broadcast</string>
     <string name="player_broadcast_action">player broadcast action</string>
     <string name="colon">:</string>
+    <string name="tracklist_parcel_key">tracklist parcel key</string>
 </resources>
